@@ -27,6 +27,8 @@ PHP                                                                        NEWS
   classes). (Marcus)
 - Fixed bug #34277 (array_filter() crashes with references and objects).
   (Dmitry)
+- Fixed bug #34137 (assigning array element by reference causes binary mess).
+  (Dmitry) 
 - Fixed bug #34078 (Reflection API problems in methods with boolean or 
   null default values). (Tony)
 - Fixed bug #34064 (arr[] as param to function is allowed only if function 
